plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    // Source: https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // Source: https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity6
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    // log4jdbc: 실제로 실행되는 SQL 구문을 로그로 출력하기 위한 라이브러리
    // Source: https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1
    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
    // QueryDSL: 쿼리를 타입 안전하게 생성 관리하도록 돕는 프레임워크
    // Source: https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    // Thymeleaf Layout Dialect
    // Source: https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
    // Apache Commons CSV: CSV 파일 처리를 위한 라이브러리
    // Source: https://mvnrepository.com/artifact/org.apache.commons/commons-csv
    implementation 'org.apache.commons:commons-csv:1.14.1'
    // Validation API: 서버 사이드에서 입력의 유효성 검증을 위한 표준 API
    // Source: https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api
    implementation 'jakarta.validation:jakarta.validation-api'
    // OAuth2: 소셜 로그인 의존성
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // WebClient: spring Boot에서 Groq와 통신하는 도구
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    // JSON.simple: JSON 데이터 처리용
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    // QueryDSL QClass 생성을 위한 annotationProcessor
    // Source: https://mvnrepository.com/artifact/com.querydsl/querydsl-apt
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    // QueryDSL QClass 생성 시 Jakarta Annotation/JPA API를 참조하기 위한 호환성 설정
    // Source: https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-thymeleaf-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'

}

tasks.named('test') {
    useJUnitPlatform()
}


def querydslSrcDir = 'src/main/generated'    // Q-Type 생성 위치
clean { delete file(querydslSrcDir) }               // 테이블에 변동이 있거나 서버를 껐다 켰을 경우 Q-Type 지우고 다시 생성

// 컴파일 시 비교되는 Q-Type 위치설정
tasks.named('compileJava', JavaCompile) {
    options.generatedSourceOutputDirectory = file(querydslSrcDir)
}